change the lilSomethin page appearance to match it with the index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span id="messageDisplay"></span>
         <button class="mode">Easy</button>
         <button class="mode">Hard</button>
-        <span id="lilSpan"></span>
+        <span id="spaceSpan"></span>
         <a href="lilSomething.html">a lil somethin</a>
 
     </div>
