Marge the two css files in one shared file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="mode">Easy</button>
         <button class="mode">Hard</button>
         <span id="spaceSpan"></span>
-        <a href="lilSomething.html">a lil somethin</a>
+        <a href="lilSomething.html">a lil something extra</a>
     </div>
     <div id="container">
         <div class="square"></div>
