--- a/lilSomething.html
+++ b/lilSomething.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/lilSomethin.css">
-    <title>The lil somethin</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <title>The lil something</title>
 </head>
 <body>
     <h1 class="header">Try your RGB imagination <br>
@@ -13,7 +13,7 @@
         and watch what happens <br>
     </h1>
     <div class="nav">
-        go back to the <a href="index.html">'game'</a>    
+        go back to the <a href="index.html">Color Game</a>    
     </div>  
     <div class="colors">
         &nbsp; R  <input type="number" id="redColor" value="35" min="0" max="255">
