--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<span id="colorDisplay"></span> <br>
 		Color Game
 	</h1>
+
 	<div id="stripe">
 		<button id="reset">New Colors</button>
 		<span id="messageDisplay"></span>
@@ -21,6 +22,7 @@
 		<span id="spaceSpan"></span>
 		<a href="lilSomething.html">a lil something extra</a>
 	</div>
+
 	<div id="container">
 		<div class="square"></div>
 		<div class="square"></div>
@@ -29,6 +31,17 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
+
+	<footer>
+		<p class="footer-title">Find me on</p>
+		<a href="http://www.alabugrara.com" title="Website" target="_blank"><img class="social-img" src="img/websiteIcon.svg" alt="WEBSITE"></a>
+		<a href="mailto:alaeddin.abugrara@gmail.com" title="E-mail" target="_blank"><img class="social-img" src="img/mailIcon.svg" alt="mail"></a>
+		<a href="skype:alaabugrara?userinfo" title="Skype" target="_blank"> <img class="social-img" src="img/skypeIcon.svg" alt="Skype"></a>
+		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" title="Linked-in" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://github.com/Funkateer" title="Github"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" title="Twitter" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
+	</footer>
+
 <script src="assets/js/app.js"></script>
 </body>
 </html>
