--- a/lilSomething.html
+++ b/lilSomething.html
@@ -8,18 +8,32 @@
 	<title>The lil something</title>
 </head>
 <body>
+
 	<h1 class="header">Try your RGB imagination <br>
 		insert a number from 0 to 255 <br>
 		and watch what happens <br>
 	</h1>
+
 	<div class="nav">
 		go back to the <a href="index.html">Color Game</a>
 	</div>
+
 	<div class="colors">
 		&nbsp; R  <input type="number" id="redColor" value="35" min="0" max="255">
 		&nbsp; G  <input type="number" id="greenColor" value="35" min="0" max="255">
 		&nbsp; B  <input type="number" id="blueColor" value="35" min="0" max="255">
 	</div>
+
+	<footer>
+		<p class="footer-title">Find me on</p>
+		<a href="http://www.alabugrara.com" title="Website" target="_blank"><img class="social-img" src="img/websiteIcon.svg" alt="WEBSITE"></a>
+		<a href="mailto:alaeddin.abugrara@gmail.com" title="E-mail" target="_blank"><img class="social-img" src="img/mailIcon.svg" alt="mail"></a>
+		<a href="skype:alaabugrara?userinfo" title="Skype" target="_blank"> <img class="social-img" src="img/skypeIcon.svg" alt="Skype"></a>
+		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" title="Linked-in" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://github.com/Funkateer" title="Github"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" title="Twitter" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
+	</footer>
+
 	<script src="assets/js/lilSomethin.js"></script>
 </body>
 </html>
